--- a/templates/projects.html
+++ b/templates/projects.html
@@ -11,8 +11,8 @@
     <header class="header">
         <a href="/" class="nav-text" id="home-link">Home</a>
         <nav class="nav-bar" style="margin-left: 60%;">
-            <a href="/about" class="nav-text" id="about-link">About Me</a>
-            <a href="/projects" class="nav-text" id="projects-link">Projects</a>
+            <a href="{{ url_for('about') }}" class="nav-text" id="about-link">About Me</a>
+                <a href="{{ url_for('about') }}" class="nav-text" id="projects-link">Projects</a>
         </nav>
     </header>
     
