--- a/templates/about.html
+++ b/templates/about.html
@@ -15,8 +15,8 @@
     <header class="header">
         <a href="/" class="nav-text" id="home-link"> Home </a>
         <nav class="nav-bar">
-            <a href="/about" class="nav-text" id="about-link">About Me</a>
-            <a href="/projects" class="nav-text" id="projects-link">Projects</a>
+            <a href="{{ url_for('about') }}" class="nav-text" id="about-link">About Me</a>
+            <a href="{{ url_for('about') }}" class="nav-text" id="projects-link">Projects</a>
         </nav>
     </header>
     <div class="page-row-section">
