--- a/templates/about.html
+++ b/templates/about.html
@@ -16,7 +16,7 @@
         <a href="/" class="nav-text" id="home-link"> Home </a>
         <nav class="nav-bar">
             <a href="{{ url_for('about') }}" class="nav-text" id="about-link">About Me</a>
-            <a href="{{ url_for('about') }}" class="nav-text" id="projects-link">Projects</a>
+            <a href="{{ url_for('projects') }}" class="nav-text" id="projects-link">Projects</a>
         </nav>
     </header>
     <div class="page-row-section">
