--- a/templates/projects.html
+++ b/templates/projects.html
@@ -12,7 +12,7 @@
         <a href="/" class="nav-text" id="home-link">Home</a>
         <nav class="nav-bar" style="margin-left: 60%;">
             <a href="{{ url_for('about') }}" class="nav-text" id="about-link">About Me</a>
-                <a href="{{ url_for('about') }}" class="nav-text" id="projects-link">Projects</a>
+                <a href="{{ url_for('projects') }}" class="nav-text" id="projects-link">Projects</a>
         </nav>
     </header>
     
