--- a/templates/IndividualProjects/andersonCodingClub.html
+++ b/templates/IndividualProjects/andersonCodingClub.html
@@ -24,14 +24,25 @@
                 <div class="selector-content">
                     <div class="page-row-section">
                         <div style="margin-top: 100px; margin-bottom: 100px; margin-left: 350px; margin-right: 350px;">
-                            <p1 class="page-text"> Fistbump is a social networking app that links you with other users. Each day, you recieve 1 random user, with whom you must meet up with in person, and take a picture with them. After this, your image is shared to the wall, where everyone can see connections being made with their friends. This short act of meeting up to take your Fistbump together finishes the hardest step of meeting new people: Breaking the ice. After meeting each other, the two users are physically close and have talked, and this small connection could lead to more conversations, activities done together, shared phone numbers, and eventually, a new friendship.</p1>
+                            <p1 class="page-text"> This was the very first website I ever built. Two friends and I started the Competitive Coding Club to give students a place to learn and compete in coding, and I created the website to share our mission, promote meetings, and highlight events. It became the hub for announcing friendly LeetCode battles and signing up for online hackathons. Building it taught me how to design, publish, and maintain a live site from scratch — and gave me confidence to keep creating bigger projects.</p1>
                         </div>
                     </div>
                 </div>
                 <div class="selector-content">
                     <div class="page-row-section" style="margin-bottom: 100px;">
-                        <img style="margin-right: 100px;" class="img-vertical" src="{{ url_for('static', filename='images/fistbumpProfile.jpeg') }}" alt="fistbump profile page">
-                        <img style="margin-left: 100px;" class="img-vertical" src="{{ url_for('static', filename='images/fistbumpPhoto.jpeg') }}" alt="fistbump picture page">
+                        <img style="margin-right: 50px;" class="img-horizontal" src="{{ url_for('static', filename='images/club1.jpeg') }}" alt="fistbump profile page">
+                        <img style="margin-left: 50px;" class="img-horizontal" src="{{ url_for('static', filename='images/club2.jpeg') }}" alt="fistbump picture page">
+                    </div>
+                </div>
+                <div class="selector-content">
+                    <div class="page-row-section" style="margin-bottom: 100px;">
+                        <img style="margin-right: 50px;" class="img-horizontal" src="{{ url_for('static', filename='images/club3.jpeg') }}" alt="fistbump profile page">
+                        <img style="margin-left: 50px;" class="img-horizontal" src="{{ url_for('static', filename='images/club4.jpeg') }}" alt="fistbump picture page">
+                    </div>
+                </div>
+                <div class="selector-content">
+                    <div class="page-row-section" style="margin-bottom: 100px;">
+                        <img style="margin-right: 0px;" class="img-horizontal" src="{{ url_for('static', filename='images/club5.jpeg') }}" alt="fistbump profile page">
                     </div>
                 </div>
                 <div class="page-column-section" style="position: relative; height: 100vh;">
