--- a/templates/IndividualProjects/fistbump.html
+++ b/templates/IndividualProjects/fistbump.html
@@ -28,6 +28,21 @@
                 </div>
             </div>
             <div class="selector-content">
+                <div class="page-row-section">
+                    <div style="margin-top: 0px; margin-bottom: 100px; margin-left: 350px; margin-right: 350px;">
+                        <div class="video-wrap">
+                            <iframe
+                              src="https://www.youtube-nocookie.com/embed/ee4lOAGNaIg?start=81"
+                              title="Fistbump video"
+                              loading="lazy"
+                              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                              allowfullscreen>
+                            </iframe>
+                          </div>                          
+                    </div>
+                </div>
+            </div>    
+            <div class="selector-content">
                 <div class="page-row-section" style="margin-bottom: 100px;">
                     <img style="margin-right: 100px;" class="img-vertical" src="{{ url_for('static', filename='images/fistbumpProfile.jpeg') }}" alt="fistbump profile page">
                     <img style="margin-left: 100px;" class="img-vertical" src="{{ url_for('static', filename='images/fistbumpPhoto.jpeg') }}" alt="fistbump picture page">
