--- a/templates/projects.html
+++ b/templates/projects.html
@@ -19,6 +19,24 @@
     <main> 
         <div class="page-row-section">
             <div class="page-column-section">
+                <a href="/kneeEd">
+                    <div class="selector-content">
+                        <div class="content default-mode">
+                            <div class="page-row-section inner-row-section">
+                                <img class="project-img" src="{{ url_for('static', filename='images/kneeEd1.jpeg')}}">
+                                <div class="page-column-section inner-column-section">
+                                    <h1 class="page-text" style="font-size: 45px;">KneeEd</h1>
+                                    <p class="page-text" style="font-size: 20px; color: darkgrey;">Reimagining Injury Rehab and Performance Training</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>        
+        <hr class="gradient-hr"> 
+        <div class="page-row-section">
+            <div class="page-column-section">
                 <a href="/fistbump">
                     <div class="selector-content">
                         <div class="content default-mode">
@@ -44,7 +62,7 @@
                                 <img class="project-img" src="{{ url_for('static', filename='images/positive_data_word_cloud.jpeg')}}">
                                 <div class="page-column-section inner-column-section">
                                     <h1 class="page-text" style="font-size: 45px;">NLP for Finance</h1>
-                                    <p class="page-text" style="font-size: 20px; color: darkgrey;"> Leveraging Machine Learning to analyze Stock Sentiment</p>
+                                    <p class="page-text" style="font-size: 20px; color: darkgrey;"> Leveraging Machine Learning to Analyze Stock Sentiment</p>
                                 </div>
                             </div>
                         </div>
@@ -62,7 +80,7 @@
                                 <img class="project-img" style="object-position: left 6%;" src="{{ url_for('static', filename='images/anderson_coding_club.jpeg')}}">
                                 <div class="page-column-section inner-column-section">
                                     <h1 class="page-text" style="font-size: 45px;">Anderson Coding Club</h1>
-                                    <p class="page-text" style="font-size: 20px; color: darkgrey;">Website page for all needed information about coding club</p>
+                                    <p class="page-text" style="font-size: 20px; color: darkgrey;">Website Page for all Needed Information About Coding Club</p>
                                 </div>
                             </div>
                         </div>
@@ -70,6 +88,24 @@
                 </a>
             </div>
         </div>
+        <hr class="gradient-hr"> 
+        <div class="page-row-section">
+            <div class="page-column-section">
+                <a href="/canKiosk">
+                    <div class="selector-content">
+                        <div class="content default-mode">
+                            <div class="page-row-section inner-row-section">
+                                <img class="project-img" src="{{ url_for('static', filename='images/CANKiosk3.png')}}">
+                                <div class="page-column-section inner-column-section">
+                                    <h1 class="page-text" style="font-size: 45px;">canKiosk</h1>
+                                    <p class="page-text" style="font-size: 20px; color: darkgrey;">A Custom Kiosk Site Built to Support my Robotics Team</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>        
     </main>
 
 
